# pkg/openapi/order/v1/oas_request_encoders_gen.go
@@ -23,3 +23,17 @@ func encodeAcceptOrderRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeUpdateOrderRequest(
+	req *PatchOrderRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
